test/cherry/Language/tensor_size_error.cherry
# RUN: not cherry-driver -dump=mlir %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  size(1)
}

# CHECK: error: type mismatch
